Minor changes updated...

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 						      	<div class="invitation-message">
 						      		<h1>Wedding Invitation</h1>
 									<h5>You are cordially invited to celebrate <br/> the wedding of</h5>
+									<span><<</span> <a class="play-music">wedding music</a> <span>>></span>
 								</div>
 						    </div>
 
@@ -54,15 +55,14 @@
 			document.body.appendChild(audio);
 			audio.src = "img/marriage-songs.mpeg"
 
-
-			document.body.addEventListener("mouseover", function () {
-			    audio.play()
-			})
-
 			$(document).ready(function(){
 				$('.carousel').carousel({
 				  	interval: 1000 * 2
 				});
+
+				$('.play-music').click(function(){
+					audio.play();
+				})
 			});
 		</script> 
 	</body>
