Minor changes updated...

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 				$('.play-music').click(function(){
 					audio.play();
 				})
+
+				$('.play-music').trigger('click');
 			});
 		</script> 
 	</body>
