Minor changes updated...

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<script type="text/javascript">
 			var audio = document.createElement("AUDIO")
 			document.body.appendChild(audio);
-			audio.src = "img/marriage-songs.mpeg"
+			audio.src = "img/marriage-songs.mpeg";
 
 			$(document).ready(function(){
 				$('.carousel').carousel({
