--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 
 						    <div class="item">
 						      	<div class="enagement-name">
-									<h3>Supriya</h3>
+									<h3>Ishwar</h3>
 									<p>weds</p>
-									<h3>Shreenivas</h3>
+									<h3>Ashwini</h3>
 								</div>
 						    </div>
 
 						    <div class="item">
 						      	<div class="invitation-message-address">
-									<h5>On Friday afternoon <br/> January the 31<sup>st</sup> 2020 <br/> at 12 clock 6 minutes <br/> Patil Garden, Khanapur Road, Goa Cross, Karambal <br/> Khanapur Dist. Belgaum</h5>
+									<h5>On Wednesday afternoon <br/> May 26<sup>th</sup> 2021 <br/> at 12 clock 6 minutes <br/> Manoharprabha Mrraige Hall, Bhavani Nagar <br/> Dist. Belgaum</h5>
 								</div>
 						    </div>
 						</div>
