--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 						    <div class="item">
 						      	<div class="invitation-message-address">
-									<h5>On Wednesday afternoon <br/> May 26<sup>th</sup> 2021 <br/> at 12 clock 6 minutes <br/> Manoharprabha Marriage Hall, Bhavani Nagar <br/> Dist. Belgaum</h5>
+									<h5>On Wednesday afternoon <br/> May 26<sup>th</sup> 2021 <br/> at 12 clock 6 minutes <br/> Mangal Karyalaya, Manoprabha, Kaveri Nagar<br/> Dist. Belgaum</h5>
 								</div>
 						    </div>
 						</div>
